objects/Agreement_Trade_Instrument__c.object
<CustomObject>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Agreement__c</referenceTo>
        <relationshipLabel>Trade Instruments</relationshipLabel>
        <relationshipName>Trade_Instruments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supporting_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supporting Agreement</label>
        <referenceTo>Supporting_Agreement__c</referenceTo>
        <relationshipLabel>Excluded Trade Instruments</relationshipLabel>
        <relationshipName>Agreement_Trade_Instruments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trade_Instrument__c</fullName>
        <label>Trade Instrument</label>
        <referenceTo>Trade_Instrument__c</referenceTo>
        <relationshipLabel>Agreement Trade Instruments</relationshipLabel>
        <relationshipName>Agreement_Trade_Instruments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Agreement Trade Instrument</label>
    <nameField>
        <displayFormat>ATI - {00000}</displayFormat>
        <label>Agreement Trade Instrument Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Trade Instruments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>